    dependencies for another architecture. This is really basic for now since
    it assumes all build dependencies must be satisfied on the listed
    architecture. Closes: #648180 Thanks to Colin Watson for the patch.
  * Error out if a dpkg database .list file is not a regular file. LP: #369898
  * Fix dpkg-mergechangelogs to not error out on invalid versions.
    Closes: #651993

  [ Jonathan Nieder ]
  * Bump po4a version in Build-Depends to 0.41, since earlier versions do
    not handle --srcdir correctly. Closes: #644370

  [ Helge Kreutzmann ]
  * Fix a typo in man/dpkg-deb.1.

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #627832
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #636238
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann), including typo fix in dpkg-genchanges 
    Closes: #646496, sub optimal translation of package states LP: #368783
    and an fix by Chris Leick
  * Japanese (TAKAHASHI Motonobu).
  * Spanish (Omar Campagne). Closes: #643969
  * Swedish (Peter Krefting).
  * Minor errors corrected in French (thanks to David Prévot)

  [ Updated dselect translations ]
  * Dutch (Jeroen Schot). Closes: #651813

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 23 Sep 2011 17:29:38 +0200

dpkg (1.16.1.2) unstable; urgency=medium

  [ Raphaël Hertzog ]
  * Fix another typo to correctly set DEB_*_ARCH_BITS in architecture.mk.
  * Set urgency to medium as changes are minor, and it should migrate
    quickly in case 1.16.2 comes soon.

  [ Jonathan Nieder ]
  * Update dpkg-buildflags(1) to note that the processor option
    -D_FORTIFY_SOURCE=2 is set in CPPFLAGS now instead of CFLAGS and
    CXXFLAGS. Closes: #646073

 -- Raphaël Hertzog <hertzog@debian.org>  Fri, 25 Nov 2011 11:18:30 +0100

dpkg (1.16.1.1) unstable; urgency=low

  [ Raphaël Hertzog ]